// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on npm monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
  },
  "devDependencies": {
    "vite-plus": "latest",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on pnpm monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
  },
  "devDependencies": {
    "vite": "catalog:",
    "vite-plus": "catalog:",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on standalone project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
  },
  "devDependencies": {
    "vite": "npm:@voidzero-dev/vite-plus-core@latest",
    "vite-plus": "latest",
  },
}
`;

exports[`rewritePackageJson > should rewrite devDependencies and dependencies on yarn monorepo project 1`] = `
{
  "dependencies": {
    "foo": "1.0.0",
  },
  "devDependencies": {
    "vite-plus": "catalog:",
  },
}
`;

exports[`rewritePackageJson > should rewrite package.json scripts and extract staged config 1`] = `
{
  "lint-staged": {
    "*.js": [
      "oxlint --fix --type-aware",
      "oxfmt --fix",
    ],
    "*.ts": "oxfmt --fix",
  },
  "scripts": {
    "build": "pnpm install && vp build -r && vp run build --watch && vp pack && tsc || exit 1",
    "dev": "vp dev",
    "dev_analyze": "vp dev --analyze",
    "dev_cjs": "VITE_CJS_IGNORE_WARNING=true vp dev",
    "dev_cjs_cross_env": "cross-env VITE_CJS_IGNORE_WARNING=true vp dev",
    "dev_debug": "vp dev --debug",
    "dev_help": "vp dev --help && vp dev -h",
    "dev_host": "vp dev --host 0.0.0.0",
    "dev_open": "vp dev --open",
    "dev_port": "vp dev --port 3000",
    "dev_profile": "vp dev --profile",
    "dev_stats": "vp dev --stats",
    "dev_trace": "vp dev --trace",
    "dev_verbose": "vp dev --verbose",
    "fmt": "vp fmt",
    "fmt_config": "vp fmt --config .oxfmt.json",
    "lint": "vp lint",
    "lint_config": "vp lint --config .oxlint.json",
    "lint_type_aware": "vp lint --type-aware",
    "optimize": "vp optimize",
    "pack": "vp pack",
    "pack_watch": "vp pack --watch",
    "preview": "vp preview",
    "ready": "vp lint --fix --type-aware && vp test run && vp pack && vp fmt --fix",
    "ready_env": "NODE_ENV=test FOO=bar vp lint --fix --type-aware && NODE_ENV=test FOO=bar vp test run && NODE_ENV=test FOO=bar vp pack && NODE_ENV=test FOO=bar vp fmt --fix",
    "ready_new": "vp install && vp fmt && vp lint --type-aware && vp test -r && vp build -r",
    "test": "vp test",
    "test_run": "vp test run && vp test --ui",
    "version": "vp --version",
    "version_short": "vp -v",
    "wrapped_build": "bunx --bun vp build",
    "wrapped_dev": "bunx --bun vp dev",
    "wrapped_fmt": "bunx --bun vp fmt --check .",
    "wrapped_lint": "bunx --bun vp lint --type-aware",
    "wrapped_nested_dev": "NODE_ENV=development portless --tailscale run bunx --bun vp dev",
    "wrapped_nested_test": "dotenv -e .env.test -- bunx --bun vp test run",
    "wrapped_pack": "bunx --bun vp pack --watch",
    "wrapped_preview": "bunx --bun vp preview",
    "wrapped_staged": "bunx --bun vp staged",
    "wrapped_test": "bunx --bun vp test run",
    "wrapped_unrelated": "bunx --bun playwright test",
  },
}
`;

exports[`rewritePackageJson > should rewrite package.json scripts and extract staged config 2`] = `
{
  "*.js": [
    "vp lint --fix --type-aware",
    "vp fmt --fix",
  ],
  "*.ts": "vp fmt --fix",
}
`;
